# config

./: .gitattributes  .gitignore  .zshrc  Xresources  configmapper.bat  configmapper.sh  gitconfig  gpg-updatestartuptty.sh  i3status.conf  install-hooks.sh  screenrc  strip-api-keys  tmux.conf  vimrc  xmodmap  zshenv  zshrc
.vim/: .netrwhist
ansible/: basic.yml  hosts  master.yml  user.yml
ansible/aws/: create.yml
ansible/gce/: master.yml
dot/: Rprofile  Xresources  ansible.cfg  mbsyncrc  msmtprc  psqlrc  tmux.conf  vimrc  xinitrc  xsession  zprofile  zshenv  zshrc
dot/R/: Makevars
dot/ghc/: .gitignore  ghci.conf
dot/gnupg/: gpg-agent.conf
dot/mplayer/: config
dot/mutt/: mailcap  muttrc
dot/stack/: config.yaml
dot/vim/: .VimballRecord
dot/vnc/: Xvnc-session  config  vnc.conf  xstartup
dot/xmonad/: .gitignore  ChangeLog.md  LICENSE  cabal.project  xmonad.hs  xmonconf.cabal
etc/: aliases.enc  hosts  msmtprc  rsyncd.conf
etc/docker/: daemon.json
etc/ssh/: sshd_config
etc/sudoers.d/: 10_data  data  wheel
i3/: config
misc/: ihaskell-sandbox.cabal  install_anonymous_pro_font.sh  install_btsync.sh  install_docker.sh  install_grafana.sh  install_helpers.sh  install_influxdb.sh  install_sfnettest.sh  install_source_code_pro_font.sh  install_st.sh
qnap/: docker-compose.yml
vim/: .VimballRecord  .netrwhist
vim/bundle/: vim-colors-solarized
vim/ftplugin/: cpp.vim  python.vim
xdg/autostart/: ibus-daemon-autostart.sh  xset-autostart.sh
xdg/git/: config  gitk  ignore
xdg/home-manager/: flake.nix  home.nix
xdg/jsxhint/: config
(+64 files in other folders)
