--Initialihaskell-sandbox.cabalgeneratedbycabalinit.Forfurther
-- documentation, see http://haskell.org/cabal/users-guide/

name:                ihaskell-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Thayne Batty
maintainer:          tsbattman@gmail.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       ihaskell, ihaskell-display,
                       ihaskell-charts, ihaskell-diagrams,
                       ihaskell-blaze, ihaskell-aeson
  -- hs-source-dirs:
  default-language:    Haskell2010
